can i get credit for this one?

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
     <title>React App</title>
     <script id="react-dotenv" src="./env.js"></script>
   </head>
-  <body style="width: 100vw; height: 100vh">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="height: 100%; width: 100%"></div>
+    <div id="root"></div>
   </body>
 </html>
